--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -41,6 +41,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 18px;
+    color: var(--text-color);
 
     .name {
       width: 90%;
