--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -6,8 +6,8 @@
   line-height: 50px;
   padding: 0 35px 0 35px;
   font-size: 15px;
-  background-color: black;
-  color: white;
+  background-color: var(--button-background);
+  color: var(--button-text-color);
   text-transform: uppercase;
   font-family: "Open Sans Condensed";
   font-weight: bolder;
@@ -17,28 +17,28 @@
   justify-content: center;
 
   &:hover {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
+    background-color: var(--button-hover-background);
+    color: var(--button-hover-text-color);
+    border: 1px solid var(--button-border-color);
   }
 
   &.google-sign-in {
-    background-color: #4285f4;
+    background-color: var(--google-button-background);
     color: white;
 
     &:hover {
-      background-color: #357ae8;
+      background-color: var(--google-button-hover-background);
       border: none;
     }
   }
   &.inverted {
-    background-color: white;
-    color: black;
-    border: 1px solid black;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
 
     &:hover {
-      background-color: black;
-      color: white;
+      background-color: var(--text-color);
+      color: var(--background-color);
       border: none;
     }
   }
