--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -4,7 +4,7 @@ $main-color: black;
 @mixin shrinkLabel {
   top: -14px;
   font-size: 12px;
-  color: $main-color;
+  color: var(--text-color);
 }
 
 .group {
@@ -13,15 +13,15 @@ $main-color: black;
 
   .form-input {
     background: none;
-    background-color: white;
-    color: $sub-color;
+    background-color: var(--input-background);
+    color: var(--text-color);
     font-size: 18px;
     padding: 10px 10px 10px 5px;
     display: block;
     width: 100%;
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid $sub-color;
+    border-bottom: 1px solid var(--input-border-bottom);
     margin: 25px 0;
 
     &:focus {
@@ -38,7 +38,7 @@ $main-color: black;
   }
 
   .form-input-label {
-    color: $sub-color;
+    color: var(--sub-text-color);
     font-size: 16px;
     font-weight: normal;
     position: absolute;
