--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -4,6 +4,11 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: var(--background-color);
+  transition: background-color 0.3s ease;
 
   .logo-container {
     height: 100%;
