--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  border: 1px solid var(--text-color);
   margin: 0 7.5px 15px;
   overflow: hidden;
 
@@ -48,8 +48,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    background-color: white;
+    border: 1px solid var(--text-color);
+    background-color: var(--card-background);
     opacity: 0.7;
     position: absolute;
 
@@ -57,7 +57,7 @@
       font-weight: bold;
       margin-bottom: 6px;
       font-size: 22px;
-      color: #4a4a4a;
+      color: var(--text-color);
     }
 
     .subtitle {
